manifests/apps/radarr/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: radarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-home
    kubernetes.io/ingress.class: nginx
  labels:
    app: radarr
    env: home
spec:
  tls:
  - hosts:
    - radarr.k8s.iaminyourpc.xyz
    secretName: tls-radarr-k8s-iaminyourpc-xyz
  rules:
  - host: radarr.k8s.iaminyourpc.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: radarr
            port:
              number: 7878
